# haskell-logger

./: CHANGELOG.md  cabal.project  flake.nix  real-folk-logger.cabal
lib/Logger/: Terminal.hs
lib/Logger/Lib/: Logger.hs  Record.hs
lib/Logger/Terminal/: Style.hs
src/logger/lib/: Logger.hs
src/logger/lib/Logger/Lib/: Logger.hs  Record.hs
src/logger/tests/: Deprecated.hs
