cabal-version: 3.0
name: real-folk-logger
version: 0.1.0.0

homepage: https://github.com/realfolk/haskell-logger
license: LGPL-3.0-only
license-file: LICENSE

author: Dhruv Dang
maintainer: dhruv@realfolk.com

category: Web

build-type: Simple

library
    ghc-options: -Wall

    default-language: GHC2021
    hs-source-dirs: lib

    exposed-modules:
        Logger
        Logger.Lib.Logger
        Logger.Lib.Record
        Logger.Terminal
        Logger.Terminal.Style

    build-depends:
        base ^>=4.16.4.0,
        containers,
        pouch,
        text

test-suite real-folk-logger-test
    ghc-options: -Wall

    type: exitcode-stdio-1.0

    default-language: GHC2021
    hs-source-dirs: test
    main-is: Spec.hs

    build-depends:
        base ^>=4.16.4.0,
        hspec,
        real-folk-logger
